# UntitledDataFormat

./: .gitignore  Cargo.toml  index.html  readme.md  specification.md
.github/workflows/: ci.yml
cli/: Cargo.toml  readme.md
cli/examples/: import-obj.rs
cli/src/: export.rs  import.rs  macros.rs  main.rs  print.rs  set_root.rs  validate.rs
cli/src/import/: parse_num.rs
data/: readme.md
examples/: bptypes.md  ndprint.rs  playground.rs  randomjob.rs
rust/: Cargo.toml  readme.md
rust/examples/: compress.rs  invalid.rs  playground.rs  randomjob.rs
rust/src/: asdata.rs  compress.rs  data.rs  dataset.rs  dataset_ref.rs  file_offset.rs  fileio.rs  format.rs  hash.rs  lib.rs  names.rs  names_ref.rs  print.rs  print_float.rs  shape.rs  string_array.rs  utils.rs
rust/src/compress/: simpf32.rs  simplu16.rs  simplu32.rs
samples/: bunny.udf  empty.udf  sample.udf
src/: asdata.rs  compress.rs  data.rs  dataset.rs  file_offset.rs  file_size.rs  fileio.rs  format.rs  hash.rs  lib.rs  names.rs  path.rs  primitive.rs  print_more.rs  shape.rs  table.rs  utils.rs  walk.rs
src/compress/: simple.rs  simple16.rs  simple32.rs
viewer/: .gitignore  deploy.bat  generate-samples.bat  readme.md
viewer/app/: data-grid.vue  data-sets.vue  data-text.vue  dataset.vue  header.vue  main.vue  page.html  viewer.vue
