[package]
name = "udf"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "udf"
required-features = ["clap", "ini_core"]

[profile.release]
panic = "abort"

[features]
default = ["clap", "ini_core"]

[dependencies]
dataview = "0.1.2"
clap = { version = "3.1", features = ["cargo"], optional = true }
ini_core = { version = "0.1.0", optional = true }

[dev-dependencies]
urandom = "0.1"
